--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -2,6 +2,11 @@
 @using SailScores.Core.Model;
 @using SailScores.Core.FlatModel;
 @using SailScores.Api.Enumerations;
+@using Microsoft.Extensions.Localization
+@using SailScores.Web.Resources
+@using SailScores.Web.Extensions
+
+@inject IStringLocalizer<SharedResource> localizer
 
 @model ClubItemViewModel<Series>
 
@@ -21,11 +26,11 @@
     <table class="table table-hover table-sm">
         <thead>
             <tr>
-                <th scope="col">Place</th>
-                <th scope="col">Sail</th>
-                <th scope="col">Helm</th>
-                <th scope="col" class="d-none d-sm-table-cell">Boat</th>
-                <th scope="col" class="text-center">Total</th>
+                <th scope="col">@localizer["Place"]</th>
+                <th scope="col">@localizer["Sail"]</th>
+                <th scope="col">@localizer["Helm"]</th>
+                <th scope="col" class="d-none d-sm-table-cell">@localizer["Boat"]</th>
+                <th scope="col" class="text-center">@localizer["Total"]</th>
                 @foreach (var race in Model.Item.FlatResults?.Races ?? Enumerable.Empty<FlatRace>())
                 {
                     if (race.State == RaceState.Abandoned || race.State == RaceState.Scheduled)
@@ -49,73 +54,72 @@
                 }
                 @if ((Model.Item.FlatResults.NumberOfSailedRaces) > 4)
                 {
-                    <th scope="col" class="d-table-cell d-md-none">Helm</th>
+                    <th scope="col" class="d-table-cell d-md-none">@localizer["Helm"]</th>
                 }
             </tr>
         </thead>
         <tbody>
             @{ var firstRow = true;
                 var compList = Model.Item.FlatResults?.Competitors;
-                if (compList == null || compList.Count() == 0) {
+                if (compList == null || compList.Count() == 0)
+                {
                     compList = new List<FlatCompetitor>{
                         new FlatCompetitor {
-                            Name= "No competitors"}
+                            Name= localizer["No competitors"]}
                         };
                 }
             }
             @foreach (var comp in compList)
             {
-            <tr>
-                <th scope="row">@Model.Item.FlatResults.GetScore(comp)?.Rank</th>
-                <th scope="row">@comp.SailNumber</th>
-                <th scope="row">@comp.Name</th>
-                <td class="d-none d-sm-table-cell">@comp.BoatName</td>
-                <td scope="row" class="text-center"><strong>@Model.Item.FlatResults.GetScore(comp)?.TotalScore</strong></td>
+                <tr>
+                    <th scope="row">@Model.Item.FlatResults.GetScore(comp)?.Rank</th>
+                    <th scope="row">@comp.SailNumber</th>
+                    <th scope="row">@comp.Name</th>
+                    <td class="d-none d-sm-table-cell">@comp.BoatName</td>
+                    <td scope="row" class="text-center"><strong>@Model.Item.FlatResults.GetScore(comp)?.TotalScore</strong></td>
 
                 @foreach (var race in Model.Item.FlatResults.Races)
                 {
                     if (race.State == RaceState.Abandoned)
                     {
-                        if (firstRow)
+                        if (race.State == RaceState.Canceled)
                         {
                             <td rowspan="@(Model.Item.FlatResults?.Competitors?.Count() ?? 1)" class="abandoned d-none d-sm-table-cell">
                                 <span>ABANDONED</span>
                             </td>
                         }
-                    }
-                    else if (race.State == RaceState.Scheduled)
-                    {
-                        if (firstRow)
+                        else if (race.State == RaceState.Scheduled)
                         {
                             <td rowspan="@(Model.Item.FlatResults?.Competitors?.Count() ?? 1)" class="scheduled d-none d-sm-table-cell">
                                 <span>SCHEDULED</span>
                             </td>
                         }
-                    }
-                    else
-                    {
-                        var result = Model.Item.FlatResults.GetScore(comp, race);
-                        @if (result != null)
-                        {
-                            <td class="text-center @(result?.Place == 1 ? "finish-first " : "") @(result?.Place == 2 ? "finish-second " : "") @(result?.Place == 3 ? "finish-third " : "") ">
-                                @if (result.Discard)
-                                {
-                                    @Html.Raw("<span class='text-muted'>")
-                                    @Html.Raw("<s>")
-                                }
-                                @result
-                                @if (result.Discard)
-                                {
-                                    @Html.Raw("</s>")
-                                    @Html.Raw("</span>")
-
-                                }
-                            </td>
-                        }
                         else
                         {
-                            <td></td>
+                            var result = Model.Item.FlatResults.GetScore(comp, race);
+                            @if (result != null)
+                            {
+                                <td class="text-center @(result?.Place == 1 ? "finish-first " : "") @(result?.Place == 2 ? "finish-second " : "") @(result?.Place == 3 ? "finish-third " : "") ">
+                                    @if (result.Discard)
+                                    {
+                                        @Html.Raw("<span class='text-muted'>")
+                                        @Html.Raw("<s>")
+                                    }
+                                    @result
+                                    @if (result.Discard)
+                                    {
+                                        @Html.Raw("</s>")
+                                        @Html.Raw("</span>")
+
+                                    }
+                                </td>
+                            }
+                            else
+                            {
+                                <td></td>
+                            }
                         }
+
                     }
 
                 }
