--- a/SailScores.Web/Views/ScoreCode/Edit.cshtml
+++ b/SailScores.Web/Views/ScoreCode/Edit.cshtml
@@ -11,9 +11,9 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-route-returnurl="@ViewData["ReturnUrl"]">
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="ClubId" />
+            <input type="hidden" asp-for="ScoringSystemId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -28,14 +28,18 @@
             <div class="form-group">
                 <label asp-for="Formula" class="control-label">Formula</label>
                 <select asp-for="Formula" class="form-control"
-                        asp-items="Model.FormulaOptions"
-                        ></select>
+                        asp-items="Model.FormulaOptions"></select>
                 <span asp-validation-for="Formula" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FormulaValue" class="control-label"></label>
                 <input asp-for="FormulaValue" class="form-control" type="number" />
                 <span asp-validation-for="FormulaValue" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ScoreLike" class="control-label"></label>
+                <input asp-for="ScoreLike" class="form-control"/>
+                <span asp-validation-for="ScoreLike" class="text-danger"></span>
             </div>
             <div class="form-check">
                 <input asp-for="Discardable" class="form-check-input" />
