--- a/SailScores.Web/Views/ScoringSystem/Edit.cshtml
+++ b/SailScores.Web/Views/ScoringSystem/Edit.cshtml
@@ -94,12 +94,12 @@
                         <td>@code.Name</td>
                         <td>@code.Description</td>
                         <td>@code.Formula@code.FormulaValue</td>
-                        <td>@((code.Discardable ?? false) ? "Y" : "N")</td>
-                        <td>@((code.CameToStart ?? false) ? "Y" : "N")</td>
-                        <td>@((code.Started ?? false) ? "Y" : "N")</td>
-                        <td>@((code.Finished ?? false) ? "Y" : "N")</td>
-                        <td>@((code.PreserveResult ?? false) ? "Y" : "N")</td>
-                        <td>@((code.AdjustOtherScores ?? false) ? "Y" : "N")</td>
+                        <td>@((code.Discardable ?? false) ? "Yes" : "No")</td>
+                        <td>@((code.CameToStart ?? false) ? "Yes" : "No")</td>
+                        <td>@((code.Started ?? false) ? "Yes" : "No")</td>
+                        <td>@((code.Finished ?? false) ? "Yes" : "No")</td>
+                        <td>@((code.PreserveResult ?? false) ? "Yes" : "No")</td>
+                        <td>@((code.AdjustOtherScores ?? false) ? "Yes" : "No")</td>
                     </tr>
                 }
             </tbody>
