--- a/SailScores.Web/Views/ScoreCode/Create.cshtml
+++ b/SailScores.Web/Views/ScoreCode/Create.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
-<h2>Override</h2>
+<h2>Create</h2>
 
-<h4>a score code defined in the base system</h4>
+<h4>score code</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" asp-route-returnurl="@ViewData["ReturnUrl"]">
-            <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ScoringSystemId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
