Scoring Systems structure almost done
Can delete, edit, create.
Needs help and more base systems.

--- a/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
+++ b/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
@@ -13,11 +13,7 @@
     <div id="collapseScoring" class="collapse" aria-labelledby="scoringHeading" data-parent="#accordion">
         <div class="card-body">
             <p>
-                Need to replace this with a copy from existing system. Probably shouldn't allow
-                creation of new scoring system: too many details to inherit
-                <s>
-                    @Html.ActionLink("Create", "Create", "ScoringSystem", new { /* id=item.PrimaryKey */ })
-                </s>
+                 @Html.ActionLink("Create", "Create", "ScoringSystem")
             </p>
             <table class="table table-not-wide">
                 <tbody>
