--- a/SailScores.Web/Views/ScoringSystem/Create.cshtml
+++ b/SailScores.Web/Views/ScoringSystem/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailScores.Core.Model.ScoringSystem
+﻿@model SailScores.Web.Models.SailScores.ScoringSystemWithOptionsViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -7,22 +7,12 @@
 
 <h2>Create</h2>
 
-<h4>ScoringSystem</h4>
+<h4>Scoring System</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ClubId" class="control-label"></label>
-                <input asp-for="ClubId" class="form-control" />
-                <span asp-validation-for="ClubId" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -34,14 +24,28 @@
                 <span asp-validation-for="DiscardPattern" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <label asp-for="ParentSystemId">Parent Scoring System</label>
+                <select id="parentSystemId" asp-for="ParentSystemId" class="form-control">
+                    @foreach (var scoringSystem in Model.ParentSystemOptions)
+                    {
+                        <option value="@scoringSystem.Id">
+                            @scoringSystem.Name
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="ParentSystemId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+                <a href="@ViewData["returnUrl"]"
+                   class="btn btn-outline-primary">Cancel</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-controller="Admin">Back to Admin</a>
 </div>
 
 @section Scripts {
