--- a/SailScores.Web/Views/Series/Create.cshtml
+++ b/SailScores.Web/Views/Series/Create.cshtml
@@ -45,6 +45,18 @@
                 <span asp-validation-for="SeasonId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ScoringSystemId">Default Scoring System</label>
+                <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
+                    @foreach (var scoringSystem in Model.ScoringSystemOptions)
+                    {
+                        <option value="@scoringSystem.Id">
+                            @scoringSystem.Name
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
                 <a asp-controller="Admin"
                    asp-action="Index"
