--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Edit</h2>
 
-<h4>SeriesWithOptionsViewModel</h4>
+<h4>Series</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -45,6 +45,18 @@
                     }
                 </select>
                 <span asp-validation-for="SeasonId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ScoringSystemId">Default Scoring System</label>
+                <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
+                    @foreach (var scoringSystem in Model.ScoringSystemOptions)
+                    {
+                        <option value="@scoringSystem.Id">
+                            @scoringSystem.Name
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
