--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -1,10 +1,11 @@
-﻿@using SailScores.Web.Models.SailScores;
-@using SailScores.Core.Model;
-@using SailScores.Core.FlatModel;
-@using SailScores.Api.Enumerations;
+﻿@using SailScores.Web.Models.SailScores
+@using SailScores.Core.Model
+@using SailScores.Core.FlatModel
+@using SailScores.Api.Enumerations
 @using Microsoft.Extensions.Localization
 @using SailScores.Web.Resources
 @using SailScores.Web.Extensions
+@using Humanizer
 
 @inject IStringLocalizer<SharedResource> localizer
 
@@ -88,10 +89,12 @@
                     <strong>
                         @String.Format("{0:0.##}", Model.Item.FlatResults.GetScore(comp)?.TotalScore)
 
-                        @if (Model.Item.FlatResults.IsPercentSystem)
+                        @if (Model.Item.FlatResults.IsPercentSystem &&
+                            Model.Item.FlatResults.GetScore(comp)?.TotalScore != null)
                         {
-                            @:(@Model.Item.FlatResults.GetScore(comp).PointsEarned / 
-                            @Model.Item.FlatResults.GetScore(comp).PointsPossible@:)
+                            <br />
+                    <span class="small">(@Model.Item.FlatResults.GetScore(comp).PointsEarned /
+    @Model.Item.FlatResults.GetScore(comp).PointsPossible)</span>
                         }
                     </strong></td>
 
@@ -127,9 +130,17 @@
                                     @Html.Raw("<s>")
                                 }
                                 @result
-                                @if (Model.Item.FlatResults.IsPercentSystem)
+                                @if (Model.Item.FlatResults.IsPercentSystem
+                                    && result.RawScoreValue.HasValue)
                                 {
-                                    @:(@result.RawScoreValue)
+                                <span class="small">(@if (result.RawScoreValue.Value % 1 == 0)
+                                {
+                                    @Convert.ToInt32(result.RawScoreValue.Value).Ordinalize()
+                                }
+                                else
+                                {
+                                    @result.RawScoreValue.Value
+                                })</span>
                                 }
                                 @if (result.Discard)
                                 {
